--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
       feather.replace();
     </script>
 
+    <script type="text/javascript">
+  // Mengecek apakah pengguna mengakses URL yang tidak menggunakan hash
+  if (window.location.pathname !== '/') {
+    // Redirect pengguna ke URL dengan hash
+    window.location.href = '/gumi-sasak/#' + window.location.pathname;
+  }
+</script>
+
+
     <!-- My Javascript -->
     <script src="js/script.js"></script>
   </body>
