mengatasi 404 not found ketika membuka halaman lain

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </div>
 
       <div class="navbar-nav">
-        <a href="../kabupaten/lotim.html" target="_self">EAST LOMBOK</a>
-        <a href="../kabupaten/loteng.html" target="_self">CENTRAL LOMBOK</a>
-        <a href="../kabupaten/lobar.html" target="_self">WEST LOMBOK</a>
-        <a href="../kabupaten/klu.html" target="_self">NORTH LOMBOK</a>
-        <a href="../kabupaten/mataram.html" target="_self">MATARAM</a>
+        <a href="../kabupaten/lotim.html">EAST LOMBOK</a>
+        <a href="../kabupaten/loteng.html">CENTRAL LOMBOK</a>
+        <a href="../kabupaten/lobar.html">WEST LOMBOK</a>
+        <a href="../kabupaten/klu.html">NORTH LOMBOK</a>
+        <a href="../kabupaten/mataram.html">MATARAM</a>
       </div>
 
       <div class="navbar-extra">
@@ -99,10 +99,10 @@
     <div class="slide" id="lotim">
       <h2>"Patuh Karya"</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae eum
-        amet aspernatur. Voluptatum beatae officia debitis fugiat nulla hic
-        facere, illo, consequuntur, praesentium dolores repellendus nobis velit
-        nesciunt fuga labore!
+        Kabupaten Lombok Timur adalah kabupaten di bagian timur Pulau Lombok,
+        provinsi Nusa Tenggara Barat, Indonesia. Ibu kota Lombok Timur berada di
+        kecamatan Selong. Kabupaten ini memiliki luas wilayah 1.230,76 km2
+        dengan populasi pada tahun 2020 sebanyak 1.319.537 jiwa.
       </p>
       <img src="assets/pantai-pink.jpg" alt="pctr" />
       <div class="cocard">
@@ -138,10 +138,10 @@
     <div class="slide" id="loteng">
       <h2>"Tatas, Tuhu, Trasna"</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae eum
-        amet aspernatur. Voluptatum beatae officia debitis fugiat nulla hic
-        facere, illo, consequuntur, praesentium dolores repellendus nobis velit
-        nesciunt fuga labore!
+        Lombok Tengah adalah kabupaten di Pulau Lombok, Nusa Tenggara Barat,
+        Indonesia. Ibu kota daerah ini ialah kecamatan Praya. Kabupaten Lombok
+        Tengah memiliki luas wilayah 1.095,03 km² dengan populasi sebanyak
+        1.091.564 Jiwa (2023).
       </p>
       <img src="assets/pantai-pink.jpg" alt="pctr" />
       <div class="cocard">
