done, 404 not found

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </div>
 
       <div class="navbar-nav">
-        <a href="../kabupaten/lotim.html">EAST LOMBOK</a>
-        <a href="../kabupaten/loteng.html">CENTRAL LOMBOK</a>
-        <a href="../kabupaten/lobar.html">WEST LOMBOK</a>
-        <a href="../kabupaten/klu.html">NORTH LOMBOK</a>
-        <a href="../kabupaten/mataram.html">MATARAM</a>
+        <a href="kabupaten/lotim.html">EAST LOMBOK</a>
+        <a href="kabupaten/loteng.html">CENTRAL LOMBOK</a>
+        <a href="kabupaten/lobar.html">WEST LOMBOK</a>
+        <a href="kabupaten/klu.html">NORTH LOMBOK</a>
+        <a href="kabupaten/mataram.html">MATARAM</a>
       </div>
 
       <div class="navbar-extra">
