--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
     <nav class="navbar">
       <div class="navbar-logo">
         <a href="#"
-          ><img
-            src="assets/GUMI SASAK  (2).png"
-            alt=""
-          />Gumi<span>Sasak</span>.</a
+          ><img src="assets/GUMI SASAK  (2).png" alt="" />Gumi<span
+            >Sasak</span
+          ></a
         >
       </div>
 
       <div class="navbar-nav">
-        <a href="kabupaten/lotim.html">EAST LOMBOK</a>
-        <a href="kabupaten/loteng.html">CENTRAL LOMBOK</a>
-        <a href="kabupaten/lobar.html">WEST LOMBOK</a>
-        <a href="kabupaten/klu.html">NORTH LOMBOK</a>
+        <a href="kabupaten/lotim.html">LOMBOK TIMUR</a>
+        <a href="kabupaten/loteng.html">LOMBOK TENGAH</a>
+        <a href="kabupaten/lobar.html">LOMBOK BARAT</a>
+        <a href="kabupaten/klu.html">LOMBOK UTARA</a>
         <a href="kabupaten/mataram.html">MATARAM</a>
       </div>
 
